    0.2.3
        * anonymine_engine.py: New class: hiscores
        * anonymine_engine.py (game_engine (play_game)): Create a `hiscores`
            object.
            Second return argument is now a `hiscores` object, previously
            it was a float representing the time it took to win or lose.
        * anonymine_engine.py (game_engine (__init__)): Added self.dimensions
            and self.flagcount to allow `play_game` to create a proper
            paramstring for hiscores.__init__.


2016-07-07      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.2.2
        * mkenginecfg: Bugfix:
            `nonexisting-cpulister | wc -l` returns 0 processors
            and succeeds.
            - Fixed the pipelines.
            - Added a sanity check.
        * configure.py: Fix verbosity setting for Makefile.
            Give Makefile verbose=false as default and verbose=true
            if the -v flag was used.
        * Makefile.static (overwrite-cfg):
            Use $(info) instead of echo.
        * Makefile.static (dist, tarballs, zip):
            Don't bother writing out the "Depends on tarballs and zip"
            message as that itself depends on those two targets.
            Messages are now printed by zip and tarballs.
    0.2.1
        * NEWS: Changes from 0.1.0 to 0.2.0
        * Makefile.static: FILES gone; LICENSE back

2016-06-15      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.2.0
        *: Well, it's fast enough.
        * README: Minor changes
        * test.py, testcfg: Something I did a long time ago.

2016-03-20      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.1.21
        *:
            - DoS prevention by field area and initialization time.
                (Raises new class security_alert).
            - Removed timeout from initialization slaves to improve
                initialization on larger (emphasis on comparative) fields.
        * anonymine_engine.py: New class: security_alert.